fix horizontal scroll on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,13 @@ html,
 body {
   margin: 0;
   padding: 0;
+  overscroll-behavior: contain;
+  overflow: hidden;
 }
 .cards-selector {
+  /* TODO : assign height based on innerHeight (for iOS) */
+  height: 100vh;
+  overflow-x: hidden;
   user-select: none;
   font-family: "Poppins", sans-serif;
   background: #fafafa;
